--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "video.js": "^8.23.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "uuid": "^11.0.3"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "uuid": "^11.0.3",
+    "video.js": "^8.23.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@originjs/vite-plugin-federation": "^1.4.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@types/video.js": "^7.3.58",
     "@types/uuid": "^10.0.0",
+    "@types/video.js": "^7.3.58",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
